--- a/source/Icm.TaskManager.Application/packages.config
+++ b/source/Icm.TaskManager.Application/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NodaTime" version="1.3.2" targetFramework="net45" />
+  <package id="NodaTime" version="2.0.0-alpha20160729" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
 </packages>
