--- a/source/Icm.TaskManager.Domain.Tests/packages.config
+++ b/source/Icm.TaskManager.Domain.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="4.13.0" targetFramework="net452" />
-  <package id="NodaTime" version="1.3.2" targetFramework="net452" />
+  <package id="FluentAssertions" version="4.17.0" targetFramework="net461" />
+  <package id="NodaTime" version="2.0.0-alpha20160729" targetFramework="net461" />
   <package id="NodaTime.Testing" version="1.3.2" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
