--- a/source/Icm.TaskManager.Infrastructure/packages.config
+++ b/source/Icm.TaskManager.Infrastructure/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
-  <package id="NodaTime" version="1.3.2" targetFramework="net461" />
+  <package id="NodaTime" version="2.0.0-alpha20160729" targetFramework="net461" />
 </packages>
