--- a/source/Icm.TaskManager.Application/Icm.TaskManager.Application.csproj
+++ b/source/Icm.TaskManager.Application/Icm.TaskManager.Application.csproj
@@ -52,6 +52,8 @@
     <Compile Include="ITaskApplicationService.cs" />
     <Compile Include="TaskApplicationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskDto.cs" />
+    <Compile Include="TaskExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
