--- a/source/Icm.TaskManager.Domain.Tests/Icm.TaskManager.Domain.Tests.csproj
+++ b/source/Icm.TaskManager.Domain.Tests/Icm.TaskManager.Domain.Tests.csproj
@@ -51,8 +51,8 @@
       <HintPath>..\packages\NodaTime.2.0.0-alpha20160729\lib\net45\NodaTime.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NodaTime.Testing, Version=1.3.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
-      <HintPath>..\packages\NodaTime.Testing.1.3.2\lib\net35-Client\NodaTime.Testing.dll</HintPath>
+    <Reference Include="NodaTime.Testing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NodaTime.Testing.2.0.0-alpha20160729\lib\net45\NodaTime.Testing.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
