--- a/source/Icm.TaskManager.Infrastructure/packages.config
+++ b/source/Icm.TaskManager.Infrastructure/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="NodaTime" version="2.0.0-alpha20160729" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
