--- a/source/Icm.TaskManager.Domain.Fs/Icm.TaskManager.Domain.Fs.fsproj
+++ b/source/Icm.TaskManager.Domain.Fs/Icm.TaskManager.Domain.Fs.fsproj
@@ -63,8 +63,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="NodaTime">
-      <HintPath>..\packages\NodaTime.1.3.2\lib\net35-Client\NodaTime.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\packages\NodaTime.2.2.0\lib\net45\NodaTime.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
