--- a/source/Icm.TaskManager.Infrastructure/Icm.TaskManager.Infrastructure.csproj
+++ b/source/Icm.TaskManager.Infrastructure/Icm.TaskManager.Infrastructure.csproj
@@ -9,10 +9,17 @@
     <PackageReference Include="Dapper" Version="1.50.2" />
     <PackageReference Include="NodaTime" Version="2.2.0" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Icm.TaskManager.Domain\Icm.TaskManager.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Collections.Immutable">
+      <HintPath>..\..\..\..\Users\ignacio.calvo\.nuget\packages\system.collections.immutable\1.3.0\lib\netstandard1.0\System.Collections.Immutable.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
