--- a/source/Icm.TaskManager.Infrastructure/Icm.ChoreManager.Infrastructure.csproj
+++ b/source/Icm.TaskManager.Infrastructure/Icm.ChoreManager.Infrastructure.csproj
@@ -7,9 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="NodaTime" Version="2.2.0" />
+    <PackageReference Include="NodaTime.Serialization.JsonNet" Version="2.0.0" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.2.0" />
+    <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.1.4" />
   </ItemGroup>
 
   <ItemGroup>
